<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1d1d1d">

    <TextView
        android:id="@+id/txtView_Places"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/cities"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

    <ListView
        android:id="@+id/listView_Places"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtView_Places"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="19dp"
        android:paddingTop="10dp"
        android:background="#2d2c2c"/>


    <LinearLayout
        android:id="@+id/linearLayout"
        style="?android:attr/button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/listView_Places"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_aboutKosovo"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="btn_Home"
            android:text="@string/home" />

        <Button
            android:id="@+id/btn_findPlaces"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/places" />

        <Button
            android:id="@+id/btn_Map"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="btn_Map"
            android:text="@string/map" />

    </LinearLayout>

</RelativeLayout>