<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1d1d1d">

    <LinearLayout
        android:id="@+id/linearLayoutSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/Category"
            android:textSize="24sp" />


        <Spinner
            android:id="@+id/spinner"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="#2d2c2c"
            android:layout_marginStart="20dp"
            style="?android:attr/button"/>


    </LinearLayout>

    <ListView
        android:id="@+id/listView_Places"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/linearLayoutSpinner"
        android:background="#2d2c2c"
        android:paddingTop="10dp" />


    <LinearLayout
        android:id="@+id/linearLayout"
        style="?android:attr/button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/listView_Places"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_aboutKosovo"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home"
            android:onClick="btn_Home"/>

        <Button
            android:id="@+id/btn_findPlaces"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/places"
            android:onClick="btn_Places" />

        <Button
            android:id="@+id/btn_Map"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/map"
            android:onClick="btn_Map"/>

    </LinearLayout>
</RelativeLayout>
